@@ -77,10 +77,32 @@ if test "x$enable_more_warnings" = xyes; then
   elif test "x$GCC" != xyes; then
     AC_MSG_WARN([--enable-more-warnings ignored because no GCC was detected])
   else
-    # There are some warnings which are note enabled (yet):
-    #    -Wpadded: Perhaps good for optimizing our data layout, but not in general
-    #    -Wfloat-equal: Often we should use an epsilon, but there are some correct uses, too
-    WARNINGCFLAGS="$WARNINGCFLAGS -W -Waggregate-return -Wbad-function-cast -Wcast-align -Wcast-qual -Wdisabled-optimization -Wendif-labels -Winline -Wlong-long -Wmissing-declarations -Wmissing-noreturn -Wmissing-prototypes -Wnested-externs -Wpacked -Wpointer-arith -Wredundant-decls -Wshadow -Wsign-compare -Wstrict-prototypes -Wwrite-strings"
+    # The long list of warning options below contains every GCC warning option
+    # which is not automatically enabled with -Wall. The only exceptions to this
+    # rule are:
+    #
+    #    -Wpadded:
+    #      Perhaps good for optimizing out data layout, but not in general.
+    #
+    #    -Wconversion:
+    #      Passing e.g. float as an argument is fine, we always have prototypes.
+    #
+    # Note that some older GCC versions give false positives about unreachable
+    # code.
+    WARNINGCFLAGS="$WARNINGCFLAGS -W -Waggregate-return -Wbad-function-cast -Wcast-align -Wcast-qual -Wdisabled-optimization -Wendif-labels -Wfloat-equal -Winline -Wlong-long -Wmissing-declarations -Wmissing-format-attribute -Wmissing-noreturn -Wmissing-prototypes -Wnested-externs -Wpacked -Wpointer-arith -Wredundant-decls -Wshadow -Wsign-compare -Wstrict-prototypes -Wundef -Wunreachable-code -Wwrite-strings"
+
+    # Check for GCC 4.x-only warning options.
+    ALUT_CHECK_FLAG([-Wdeclaration-after-statement],
+                    [WARNINGCFLAGS="$WARNINGCFLAGS -Wdeclaration-after-statement"])
+    ALUT_CHECK_FLAG([-Winvalid-pch],
+                    [WARNINGCFLAGS="$WARNINGCFLAGS -Winvalid-pch"])
+    ALUT_CHECK_FLAG([-Wmissing-field-initializers],
+                    [WARNINGCFLAGS="$WARNINGCFLAGS -Wmissing-field-initializers"])
+    # We cheat here a bit: The code generated by AC_LANG_PROGRAM triggers a
+    # warning with -Wold-style-definition, so we assume that this flag is
+    # supported whenever -Wvariadic-macros is.
+    ALUT_CHECK_FLAG([-Wvariadic-macros],
+                    [WARNINGCFLAGS="$AM_CFLAGS -Wvariadic-macros -Wold-style-definition"])
   fi
 fi
 
